<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madaim.ex7client.MainActivity">

    <TextView
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:text="@string/intro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/textView" />
<EditText
    android:layout_width="170dp"
    android:layout_height="35dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="28dp"
    android:id="@+id/editText"
    android:layout_below="@+id/textView"
    android:layout_alignParentStart="true"
    android:inputType="number"
    />
<EditText
    android:layout_width="170dp"
    android:layout_height="35dp"
    android:layout_marginTop="59dp"
    android:id="@+id/editText2"
    android:layout_below="@+id/editText"
    android:layout_alignStart="@+id/editText" />
<EditText
    android:layout_width="170dp"
    android:layout_height="35dp"
    android:layout_marginTop="59dp"
    android:id="@+id/editText3"
    android:layout_below="@+id/button2"
    android:layout_alignStart="@+id/editText2"
    android:inputType="textEmailAddress"
    />
<EditText
    android:layout_width="170dp"
    android:layout_height="35dp"
    android:layout_marginTop="75dp"
    android:layout_below="@+id/editText3"
    android:layout_alignStart="@+id/editText3"
    android:id="@+id/editText4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt1"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:layout_marginStart="12dp"
        android:onClick="onClick"

        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt2"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignStart="@+id/button"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt3"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignStart="@+id/button2"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt4"
        android:layout_alignBaseline="@+id/editText4"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignStart="@+id/button3"
        android:onClick="onClick"

        />

</RelativeLayout>
